# rag-firewall

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: RUNBOOK.md
docs/maintenance/: bug-triage-playbook.md  editor-standards.md  feature-intake-guide.md  git-attributes-policy.md  pull-request-review-guide.md
docs/operating-model/: architecture-decisions.md  project-scope-baseline.md  roadmap-2026.md
docs/quality/: testing-strategy.md
docs/release/: release-process-checklist.md
src/rag_firewall/: __init__.py  __main__.py  app.py  config.py  metrics.py  pipeline.py
src/rag_firewall/detectors/: __init__.py  injection.py  output.py  tools.py
tests/: conftest.py  test_injection.py  test_output.py  test_proxy.py  test_tools.py
